# vecmath

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vecmath.h  vecmath_basic_op.c  vecmath_basic_op.h  vecmath_defines.h  vecmath_macros.h  vecmath_mat_op.c  vecmath_mat_op.h  vecmath_quat_op.c  vecmath_quat_op.h  vecmath_ray_op.c  vecmath_ray_op.h  vecmath_types.h  vecmath_util.c  vecmath_util.h  vecmath_vec_op.c  vecmath_vec_op.h
headeronly/: vecmath.c  vecmath.h
tools/: make_singleheader.cpp
